@@ -5,6 +5,7 @@
 from baseplugin import BasePlugin
 from basejob import BaseJob
 
+
 class Job(BaseJob):
     """ Sample job. """
 
@@ -38,12 +39,13 @@ class Job(BaseJob):
     def __nothing__(self):
         """ The nothing check. """
         self.log.info('This check is doing nothing.')
-        self.set_check_status('FINISHED', 'I really did nothing')
+        return 'FINISHED', 'I really did nothing'
 
     def __pierrot__(self):
         """ The song check. """
         self.log.info('Au clair de la lune.')
-        self.set_check_status('FINISHED', 'Nothing to say')
+        return 'FINISHED', 'Nothing to say'
+
 
 class Plugin(BasePlugin):
     """ Sample plugin. """
@@ -59,10 +61,11 @@ class Plugin(BasePlugin):
     # Its form is : optional = {'option1_name' : option1_type, ... }
     optional = { }
 
-    def __init__(self, options, event, url=None, params=None):
+    def __init__(self, options, event, params=None):
         """ Init method of sample plugin. """
-        BasePlugin.__init__(self, options, event, url, params)
+        BasePlugin.__init__(self, options, event, params)
 
     def create_new_job(self, job):
         """ Create a new sample job. """
         return Job(self.options, job, self.params)
+
